clusters/olympus/platform/redisinsight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:
        - name: redisinsight
          image: redis/redisinsight:2.56
          ports:
            - containerPort: 5540
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: platform
spec:
  selector:
    app: redisinsight
  ports:
    - port: 5540
      targetPort: 5540
