clusters/olympus/platform/ch-ui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ch-ui
  namespace: platform
  annotations:
    external-dns.alpha.kubernetes.io/hostname: chui.nwlnexus.io
    external-dns.alpha.kubernetes.io/target: ing.ai-hub.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chui.nwlnexus.io`)
      kind: Rule
      services:
        - name: ch-ui
          port: 3488
  tls:
    certResolver: default
