clusters/olympus/platform/pgadmin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: pgadmin.nwlnexus.io
    external-dns.alpha.kubernetes.io/target: ing.compute.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.nwlnexus.io`)
      kind: Rule
      services:
        - name: pgadmin-pgadmin4
          port: 80
  tls:
    secretName: pgadmin-tls
