clusters/olympus/platform/postgrest-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgrest
  namespace: platform
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pg.nwlnexus.io
    external-dns.alpha.kubernetes.io/target: ing.ai-hub.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pg.nwlnexus.io`)
      kind: Rule
      services:
        - name: postgrest
          port: 3000
  tls:
    certResolver: default
