clusters/olympus/platform/redisinsight-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redisinsight
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: redis.nwlnexus.io
    external-dns.alpha.kubernetes.io/target: ing.compute.nwlnexus.net
    launcher.olympus.io/enabled: "true"
    launcher.olympus.io/display-name: "RedisInsight"
    launcher.olympus.io/group: "Data"
    launcher.olympus.io/icon: "boxes"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`redis.nwlnexus.io`)
      kind: Rule
      services:
        - name: redisinsight
          port: 5540
  tls:
    certResolver: default
