clusters/olympus/platform/redpanda-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redpanda-console
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: kafka.nwlnexus.io
    external-dns.alpha.kubernetes.io/target: ing.compute.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kafka.nwlnexus.io`)
      kind: Rule
      services:
        - name: redpanda-console-console
          port: 8080
  tls:
    certResolver: default
